--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.24.8",
     "axios": "^1.7.7",
+    "better-react-carousel": "^1.1.2",
     "lucide-react": "^0.459.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-gallery": "^1.0.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1",
