--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
