--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.24.8",
     "axios": "^1.7.7",
     "better-react-carousel": "^1.1.2",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.459.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
