--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react-photo-view": "^1.2.7"
+  }
 }
