ma hoa cho group, gui file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "antd": "^5.24.8",
     "axios": "^1.7.7",
     "better-react-carousel": "^1.1.2",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.459.0",
     "react": "^18.3.1",
